@@ -8,10 +8,16 @@
 			to make several changes to Segue's database and file-storage structure.
 		</important>
 		
+		<fix author='adam'>
+			Segue now prints a nice error instructing the user to update thier links 
+			if a bad link tries to get a non-existant section or page and creates a 
+			corrupted section or page object.
+		</fix>
 		<new author='adam'>
-			When copying a site, links internal to that site (such as links in a
-			content block that point to another page in the site) are now updated
-			to point to the appropriate place in the new version of the site.
+			When copying a site, section, or page, links internal to that part 
+			(such as links in a	content block that point to another page in the 
+			site or section) are now updated to point to the appropriate place in 
+			the new version of the part.
 		</new>
 		<fix author='alex'>
 			When editing slots, information about whether the slot was in use not or not
