@@ -1033,8 +1033,8 @@ function makeSiteHash (& $site) {
  * @access public
  * @date 9/16/04
  */
-function updateSiteLinksFromHash (& $site) {
- 	printpre($GLOBALS['__site_hash']);
+function updateSiteLinksFromHash (& $site, & $nodeToStartOn) {
+//  	printpre($GLOBALS['__site_hash']);
 	
 	//*****************************************************************
 	// Lets build our search terms for any links to site parts that are 
@@ -1075,31 +1075,93 @@ function updateSiteLinksFromHash (& $site) {
 	$oldSitename = $siteArray[0];
 	
 	
-	print "\n<br>Old Sitename=".$oldSitename;
-	printpre($patterns);
-	printpre($replacements);
-	
-	// Start with the site level text
-	$site->setField("header", 
-		updateLinksToNewSite($oldSitename, $patterns, $replacements,
-			$site->getField('header')));
+// 	print "\n<br>Old Sitename=".$oldSitename;
+// 	printpre($patterns);
+// 	printpre($replacements);
+
+	if (!$nodeToStartOn) {
 			
-	$site->setField("footer", 
-		updateLinksToNewSite($oldSitename, $patterns, $replacements,
-			$site->getField('footer')));
-	
-	// Do the sections
-	foreach (array_keys($site->sections) as $sectionId) {
-		$section =& $site->sections[$sectionId];
-		
-		$section->setField("url", 
+		// Start with the site level text
+		$site->setField("header", 
 			updateLinksToNewSite($oldSitename, $patterns, $replacements,
-				$section->getField('url')));
+				$site->getField('header')));
+				
+		$site->setField("footer", 
+			updateLinksToNewSite($oldSitename, $patterns, $replacements,
+				$site->getField('footer')));
 		
-		// Do the Pages
-		foreach (array_keys($section->pages) as $pageId) {
-			$page =& $section->pages[$pageId];
+		// Do the sections
+		foreach (array_keys($site->sections) as $sectionId) {
+			$section =& $site->sections[$sectionId];
 			
+			$section->setField("url", 
+				updateLinksToNewSite($oldSitename, $patterns, $replacements,
+					$section->getField('url')));
+			
+			// Do the Pages
+			foreach (array_keys($section->pages) as $pageId) {
+				$page =& $section->pages[$pageId];
+				
+				$page->setField("url", 
+					updateLinksToNewSite($oldSitename, $patterns, $replacements,
+						$page->getField('url')));
+			
+				// Do the Stories
+				foreach (array_keys($page->stories) as $storyId) {
+					$story =& $page->stories[$storyId];
+					
+					$story->setField("url", 
+						updateLinksToNewSite($oldSitename, $patterns, $replacements,
+							$story->getField('url')));
+					
+					$story->setField("shorttext", 
+						updateLinksToNewSite($oldSitename, $patterns, $replacements,
+							$story->getField('shorttext')));
+					
+					$story->setField("longertext", 
+						updateLinksToNewSite($oldSitename, $patterns, $replacements,
+							$story->getField('longertext')));
+				}
+			}
+		}
+	} else {
+		$startType = get_class($nodeToStartOn);
+		
+		if ($startType == 'section') {
+			$section =& $nodeToStartOn;
+			
+			$section->setField("url", 
+				updateLinksToNewSite($oldSitename, $patterns, $replacements,
+					$section->getField('url')));
+			
+			// Do the Pages
+			foreach (array_keys($section->pages) as $pageId) {
+				$page =& $section->pages[$pageId];
+				
+				$page->setField("url", 
+					updateLinksToNewSite($oldSitename, $patterns, $replacements,
+						$page->getField('url')));
+			
+				// Do the Stories
+				foreach (array_keys($page->stories) as $storyId) {
+					$story =& $page->stories[$storyId];
+					
+					$story->setField("url", 
+						updateLinksToNewSite($oldSitename, $patterns, $replacements,
+							$story->getField('url')));
+					
+					$story->setField("shorttext", 
+						updateLinksToNewSite($oldSitename, $patterns, $replacements,
+							$story->getField('shorttext')));
+					
+					$story->setField("longertext", 
+						updateLinksToNewSite($oldSitename, $patterns, $replacements,
+							$story->getField('longertext')));
+				}
+			}
+		} else if ($startType == 'page') {
+			$page =& $nodeToStartOn;
+				
 			$page->setField("url", 
 				updateLinksToNewSite($oldSitename, $patterns, $replacements,
 					$page->getField('url')));
@@ -1120,8 +1182,22 @@ function updateSiteLinksFromHash (& $site) {
 					updateLinksToNewSite($oldSitename, $patterns, $replacements,
 						$story->getField('longertext')));
 			}
+		} else if ($startType == 'story') {
+			$story =& $nodeToStartOn;
+			
+			$story->setField("url", 
+				updateLinksToNewSite($oldSitename, $patterns, $replacements,
+					$story->getField('url')));
+			
+			$story->setField("shorttext", 
+				updateLinksToNewSite($oldSitename, $patterns, $replacements,
+					$story->getField('shorttext')));
+			
+			$story->setField("longertext", 
+				updateLinksToNewSite($oldSitename, $patterns, $replacements,
+					$story->getField('longertext')));
 		}
-	}	
+	}
 }
 
 /**
@@ -1136,16 +1212,13 @@ function updateSiteLinksFromHash (& $site) {
  * @date 9/16/04
  */
 function updateLinksToNewSite ($oldSitename, $patterns, $replacements, $text) {
-	$origText = $text;
+
 	// First, lets make sure that all the links were converted to tags.
 	// This should get rid of any references to our site.
 	$text = convertInteralLinksToTags($oldSitename, $text);
 	
 	// Replace the link ids.
 	$text = preg_replace($patterns, $replacements, $text);
-	
-	if ($text != $origText)
-		print $text;
 	
 	return $text;
 }
